Update project information

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -344,7 +344,7 @@ SET(MACOSX_BUNDLE_LONG_VERSION_STRING "${VERSION}")
 SET(MACOSX_BUNDLE_BUNDLE_NAME "iTALC")
 SET(MACOSX_BUNDLE_SHORT_VERSION_STRING "${VERSION}")
 SET(MACOSX_BUNDLE_BUNDLE_VERSION "${VERSION}")
-SET(MACOSX_BUNDLE_COPYRIGHT "Tobias Doerffel, 2008")
+SET(MACOSX_BUNDLE_COPYRIGHT "Tobias Junghans, 2008")
 
 INCLUDE(CPack)
 
